--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -28,6 +28,7 @@ body {
     border: 2px solid #f1b2c9;
     background-color: white;
     transition: all 0.3s ease;
+    white-space: nowrap;
 }
 
 .header-button:hover {
@@ -56,7 +57,7 @@ body {
     flex-direction: row;
     list-style-type: none;
     align-items: center;
-    gap: 75px;
+    gap: 40px;
     height: 100px;
     font-size: 29px;
     font-family: 'Montserrat', sans-serif;
